--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
-.header{
-  background-color: black; 
-}
 .logo{
     padding: inherit;
     margin:auto;
@@ -9,56 +6,138 @@
 .body{
     background-color: black;
 }
-.SignIn{
+.navBar{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center; 
+    gap: 15px; 
+    padding: 8px 50px; 
+    background-color: black;
+    margin-top: -50px;
+}
+.newsletter, .SignIn {
     color: white;
     text-decoration: none;
     font-family: sans-serif;
     font-size: 12px;
-    text-align: right;
-    display: block;
-    margin-right: 210px;
-    margin-top: -13px;
-    font-weight: bold;
-   
-}
-.SignIn:hover{
-    text-decoration: underline;
-    text-decoration-color: white;
-}
-.newsletter{
-    color: white;
-    text-decoration: none;
-    font-family: sans-serif;
-    font-size: 12px;
-    text-align: right;
-    display: block;
-    margin-right: 270px;
-    margin-top: -38px;
     font-weight: bold;
 }
-.newsletter:hover{
+.newsletter:hover, .SignIn:hover {
     text-decoration: underline;
-    text-decoration-color: white;
 }
 .subscribeButton {
-    background-color: #0787ca; 
+    background-color: #0787ca;
     color: white;
     font-family: sans-serif;
     font-size: 11px;
     font-weight: bold;
-    padding: 9px 29px;
-    border-color: #0787ca;
+    padding: 9px 25px;
+    border: none;
     border-radius: 3px;
     text-decoration: none;
     text-align: center;
-    position: relative;
-    top: -20px;
-    left: 1460px;
-    display: inline-block;
+    cursor: pointer;
 }
 .search{
-    clear: both;
+    width: 30px;
+    height: 30px;
+}
+.headerText{
+    color: white;
+    font-family: "Irvin-Heading",sans-serif;
+    font-size: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 20px;
+    line-height: 1.1;
+}
+.subheaderText{
+    color: white;
+    font-family:"Adobe-Caslon-Pro-Italic",'Times New Roman', Times, serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -30px;
+    text-align: center;
+    line-height: 1.4;
+}
+.theLedeStyle {
+    text-decoration: none;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 12px;
+    text-align: center;
+    display: block; 
+}
+.theLedeStyle:hover{
+    text-decoration: underline;
+    text-decoration-color: white;
+}
+.author{
+    color: white;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.date{
+    color: white;
+    font-family: sans-serif;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -5px;
+}
+.authorLink{
+    color: white;
+    text-decoration: none;
+    font-family: sans-serif;
+}
+.authorLink:hover{
+    text-decoration: underline;
+    text-decoration-color: white;
+}
+.headerImage{
+    max-width: 95%;    
+    height: auto;
     display: block;
-    margin-left: 1580px;
+    margin: auto;
+    margin-top: -20px;
+}
+.leftHeadDiv {
+    float: left;
+    width: 50%;
+    margin-top: 250px;
+}
+.rightHeadDiv {
+    float: right;
+    width: 50%;
+    margin-top: 250px;
+}
+.dropMenu{
+   display: none;
+    justify-content: left;
     margin-top: -50px;
+    width: 40px;
+    height: 40px;
+}
+@media(max-width:1030px){
+    .elementToHide{
+        display: none;
+    }
+    .elementToShow{
+        display: block;
+    }
+    .leftHeadDiv{
+        margin-top:20px; 
+   }
+    .rightHeadDiv{
+        margin-top: 50px;
+    }
 }
