--- a/index.css
+++ b/index.css
@@ -266,6 +266,61 @@ main{
     color:  black;
     margin-top: 15px;
 }
+.mainSection4{
+    max-width: 725px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+}
+.JaneMayerImgDiv {
+    display: flex; 
+    align-items: center; 
+    gap: 20px; 
+    max-width: 800px; 
+    margin: 0 auto; 
+}
+
+.JaneMayerImg {
+    flex-shrink: 0; 
+    width: 100px; 
+    height: auto; 
+    object-fit: cover; 
+}
+
+.mainSectionText4 {
+    flex: 1; 
+    font-size: 20.5px; 
+    line-height: 1.5; 
+    color: #333; 
+    line-height: 1.4;
+}
+.moreSection {
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap; 
+    align-items: center; 
+    gap: 40px; 
+    position: relative; 
+    padding-bottom: 10px; 
+}
+
+.moreLabel {
+    color: #757575;
+    font-weight: bold;
+}
+
+.moreLink {
+    text-decoration: none; 
+    color: black; 
+    font-weight: solid;
+    font-size: 16px; 
+    font: Helvetica, sans-serif;
+}
+
+.moreLink:hover {
+    text-decoration: underline; 
+}
+
 @media(max-width:1030px){
     .elementToHide{
         display: none;
