--- a/index.css
+++ b/index.css
@@ -417,34 +417,33 @@ footer h4{
     gap: 10px; 
 }
 .socials {
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 } 
 
 .socialContent {
     display: flex;
+    flex-direction: row;
     align-items: center; 
-    gap: 1rem;
-    flex-wrap: wrap;
+    text-align: left;
     justify-content: space-between; 
+    width: 100%; 
 }
 
 .copyright {
-    flex: 1 1 auto;
-    max-width: 1100px; 
+    flex: 1; 
+    max-width: 1000px; 
     font-size: 11px;
     line-height: 1.5;
-    margin: 0;
-    margin-left: 70px;
-    order: 1; 
+    margin: 0; 
 }
 
 .socialMediaIcons {
     display: flex;
-    gap: 1rem; 
-    flex-wrap: wrap; 
-    justify-content: flex-start; 
-    width: auto; 
-    order: 2; 
+    flex-wrap: wrap;
+    justify-content: flex-end; 
+    gap: 15px;
 }
 
 .socialMediaIcons img {
@@ -488,7 +487,8 @@ footer h4{
         margin-top: 10px;
     }
     .mainSection1{
-        width: 90%;
+        width: 95%;
+        max-width: 800px;
     }
     .inputBox{
         width:100%;
@@ -523,6 +523,17 @@ footer h4{
     }
     .footerAbout1,.footerAbout2{
         line-height: 3;
+    }
+    .socialContent {
+        flex-direction: column; 
+        align-items: flex-start; 
+    }
+
+    .socialMediaIcons {
+        justify-content: flex-start; 
+        margin-left: 0; 
+        margin-bottom: 10px; 
+        align-self: center;
     }
 }
 
@@ -560,6 +571,50 @@ footer h4{
     }
     .subheaderDiv{
         max-width: 490px;
+    }
+    .inputBox{
+        width: 95%;
+    }
+    .inputWrapper{
+        flex-direction: column;
+        align-items: stretch;
+        padding-left: 10px;
+    }
+    .SignUpButton1{
+        width: 95%;
+        margin-top: 10px;
+    }
+    .subDiv{
+        width: 95%;
+    }
+    .mainSection3{
+        width: 100%;
+    }
+    .mainSection4{
+        width: 100%;
+    }
+    .JaneMayerImgDiv {
+        flex-direction: column; 
+        align-items: flex-start; 
+        text-align: left; 
+    }
+    .JaneMayerImg {
+        margin-bottom: 10px; 
+    }
+    .mainSectionText4{
+        font-size: 19px;
+    }
+    .photoDiv {
+        display: flex;
+        justify-content: center; 
+        align-items: center;     
+        padding: 10px;         
+        box-sizing: border-box; 
+    }
+
+    .Photographer {
+        text-align: center;     
+        font-size: 14px;     
     }
 }
 
